--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="ios-status-indicator"></div>
             </div>
             <div class="ios-hero-text">
-                <h1 class="ios-hero-title">Koné Jean-Loïc</h1>
+                <h1 class="ios-hero-title">Koné Ismaël Jean-Loïc</h1>
                 <p class="ios-hero-subtitle">Développeur Web Fullstack & Graphiste</p>
                 <p class="ios-hero-description">Passionné par la création de designs modernes et de sites web interactifs.</p>
             </div>
