--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="ios-status-indicator"></div>
             </div>
             <div class="ios-hero-text">
-                <h1 class="ios-hero-title">Koné Ismaël Jean-Loïc</h1>
+                <h1 class="ios-hero-title">Koné Jean-Loïc</h1>
                 <p class="ios-hero-subtitle">Développeur Web Fullstack & Graphiste</p>
                 <p class="ios-hero-description">Passionné par la création de designs modernes et de sites web interactifs.</p>
             </div>
@@ -184,7 +184,7 @@
                     <p>Plateforme financière moderne pour la gestion d'argent et les transferts sécurisés.</p>
                     <div class="project-tags">
                         <span class="ios-tag">Fintech</span>
-                        <span class="ios-tag">React</span>
+                        <span class="ios-tag">react</span>
                         <span class="ios-tag">Node.js</span>
                         <span class="ios-tag">MongoDB</span>
                     </div>
@@ -197,6 +197,57 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Projet Atelier Olfactive -->
+<div class="ios-project-card">
+    <div class="project-image">
+        <div class="project-preview">
+            <div class="browser-frame">
+                <div class="browser-header">
+                    <div class="browser-dots">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="browser-url">reservations-atelier-olfactive.vercel.app</div>
+                    <div class="browser-actions">
+                        <i class="fas fa-external-link-alt"></i>
+                    </div>
+                </div>
+                <div class="website-preview olfactive-preview">
+                    <div class="preview-content">
+                        <div class="preview-header">
+                            <div class="preview-logo">AO</div>
+                            <h4>Atelier Olfactive</h4>
+                        </div>
+                        <div class="preview-features">
+                            <span class="feature-tag">Réservation</span>
+                            <span class="feature-tag">Atelier</span>
+                            <span class="feature-tag">Créatif</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="project-content">
+        <h3>Atelier Olfactif</h3>
+        <p>Plateforme de réservation pour des ateliers olfactifs créatifs et expérientiels.</p>
+        <div class="project-tags">
+            <span class="ios-tag">Next.js</span>
+            <span class="ios-tag">React</span>
+            <span class="ios-tag">TypeScript</span>
+            <span class="ios-tag">Vercel</span>
+        </div>
+        <div class="project-actions">
+            <a href="https://reservations-atelier-olfactive.vercel.app" target="_blank" class="project-link">
+                <i class="fas fa-external-link-alt"></i>
+                Visiter le site
+            </a>
+            <span class="project-status live">En ligne</span>
+        </div>
+    </div>
+</div>
             
             <!-- Projet Booking Pearl Assist -->
             <div class="ios-project-card">
@@ -235,7 +286,7 @@
                     <p>Plateforme de réservation et d'assistance pour services touristiques et voyages.</p>
                     <div class="project-tags">
                         <span class="ios-tag">Booking</span>
-                        <span class="ios-tag">Tourisme</span>
+                        <span class="ios-tag">MongoDB</span>
                         <span class="ios-tag">Node.js</span>
                         <span class="ios-tag">API REST</span>
                     </div>
@@ -245,59 +296,6 @@
                             Visiter le site
                         </a>
                         <span class="project-status live">En ligne</span>
-                    </div>
-                </div>
-            </div>
-            
-            <!-- Projet Application Mobile -->
-            <div class="ios-project-card">
-                <div class="project-image">
-                    <div class="project-preview">
-                        <div class="mobile-frame">
-                            <div class="mobile-notch"></div>
-                            <div class="mobile-screen">
-                                <div class="app-preview">
-                                    <div class="app-header">
-                                        <div class="app-icon">
-                                            <i class="fas fa-mobile-alt"></i>
-                                        </div>
-                                        <h4>App Mobile</h4>
-                                    </div>
-                                    <div class="app-content">
-                                        <div class="app-feature">
-                                            <i class="fas fa-bolt"></i>
-                                            <span>Performance</span>
-                                        </div>
-                                        <div class="app-feature">
-                                            <i class="fas fa-paint-brush"></i>
-                                            <span>Design</span>
-                                        </div>
-                                        <div class="app-feature">
-                                            <i class="fas fa-code"></i>
-                                            <span>Flutter</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="mobile-home"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-content">
-                    <h3>Application Mobile</h3>
-                    <p>Développement d'une application mobile cross-platform avec Flutter et Dart.</p>
-                    <div class="project-tags">
-                        <span class="ios-tag">Mobile</span>
-                        <span class="ios-tag">Flutter</span>
-                        <span class="ios-tag">Dart</span>
-                        <span class="ios-tag">Firebase</span>
-                    </div>
-                    <div class="project-actions">
-                        <a href="#contact" class="project-link">
-                            <i class="fas fa-info-circle"></i>
-                            Plus d'infos
-                        </a>
-                        <span class="project-status dev">En développement</span>
                     </div>
                 </div>
             </div>
@@ -447,7 +445,7 @@
             <p>&copy; 2025 Jean-Loïc Koné. Tous droits réservés.</p>
         </div>
     </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
